--- a/2018.li.dmitriy.blog.parent/settings.gradle
+++ b/2018.li.dmitriy.blog.parent/settings.gradle
@@ -1,4 +1,6 @@
 include '2018.li.dmitriy.blog.parent.client'
 include '2018.li.dmitriy.blog.parent.controller'
 include '2018.li.dmitriy.blog.parent.stand'
+include 'register'
+include '2018.li.dmitriy.blog.parent.register'
 
