--- a/2018.li.dmitriy.blog.parent/2018.li.dmitriy.blog.parent.stand/build.gradle
+++ b/2018.li.dmitriy.blog.parent/2018.li.dmitriy.blog.parent.stand/build.gradle
@@ -1,7 +1,7 @@
 dependencies{
-    compile project(":")
-    compile group: 'kz.greetgo.mvc', name: 'greetgo.mvc', version: '2.1.0'
-    compile "kz.greetgo.depinject:greetgo.depinject:2.0.0"
-    compile "kz.greetgo.depinject:greetgo.depinject.gen:2.0.0"
-    compile "kz.greetgo.mvc:greetgo.mvc.jetty:2.1.0"
+    compile project(":2018.li.dmitriy.blog.parent.controller")
+    compile "kz.greetgo.mvc:greetgo.mvc:$greetgoMvcVersion"
+    compile "kz.greetgo.depinject:greetgo.depinject:$greetgoDepInjectVersion"
+    compile "kz.greetgo.depinject:greetgo.depinject.gen:$greetgoDepInjectVersion"
+    compile "kz.greetgo.mvc:greetgo.mvc.jetty:$greetgoMvcVersion"
 }
